learning logic
