# src/bot/ChineseDuck.Bot/Rest/Repository/RestWordRepository.cs
@@ -139,88 +139,40 @@ namespace ChineseDuck.Bot.Rest.Repository
             user.LastCommand = command;
             _userApi.UpdateUser(userId, user);
         }
-
-
-        public Score GetScore(long idUser, long idWord)
+        
+        public IScore GetScore(long idUser, long idWord)
         {
-            var score = _context.Scores.FirstOrDefault(a => a.IdUser == idUser && a.IdWord == idWord);
+            //var score = _context.Scores.FirstOrDefault(a => a.IdUser == idUser && a.IdWord == idWord);
 
-            if (score != null)
-                return score;
+            //if (score != null)
+            //    return score;
 
-            var user = _context.Users.FirstOrDefault(a => a.IdUser == idUser);
-            var word = _context.Words.FirstOrDefault(a => a.Id == idWord);
+            //var user = _context.Users.FirstOrDefault(a => a.IdUser == idUser);
+            //var word = _context.Words.FirstOrDefault(a => a.Id == idWord);
 
-            if (user == null || word == null)
+            //if (user == null || word == null)
                 return null;
 
-            score = new Score
-            {
-                User = user,
-                Word = word,
-                LastView = GetRepositoryTime(),
-                LastLearnMode = ELearnMode.FullView.ToString(),
-                IsInLearnMode = false,
-                OriginalWordCount = 0,
-                OriginalWordSuccessCount = 0,
-                PronunciationCount = 0,
-                PronunciationSuccessCount = 0,
-                TranslationCount = 0,
-                TranslationSuccessCount = 0,
-                ViewCount = 0
-            };
-            _context.Scores.Add(score);
-            _context.SaveChanges();
+            //score = new Score
+            //{
+            //    User = user,
+            //    Word = word,
+            //    LastView = GetRepositoryTime(),
+            //    LastLearnMode = ELearnMode.FullView.ToString(),
+            //    IsInLearnMode = false,
+            //    OriginalWordCount = 0,
+            //    OriginalWordSuccessCount = 0,
+            //    PronunciationCount = 0,
+            //    PronunciationSuccessCount = 0,
+            //    TranslationCount = 0,
+            //    TranslationSuccessCount = 0,
+            //    ViewCount = 0
+            //};
+            //_context.Scores.Add(score);
+            //_context.SaveChanges();
 
-            return score;
+            //return score;
         }
-
-        private void SetUnscoredWords(long idUser)
-        {
-            var unscoredUserWordIds =
-                _context.Words.Where(
-                        a =>
-                            a.Scores.All(b => b.IdUser != idUser) &&
-                            (a.IdOwner == idUser || a.UserOwner.OwnerUserSharings.Any(b => b.IdFriend == idUser)))
-                    .Select(a => a.Id);
-
-            foreach (var idWord in unscoredUserWordIds.ToArray())
-                GetScore(idUser, idWord);
-        }
-
-
-        private IOrderedQueryable<Score> GetDifficultScores(ELearnMode learnMode, IQueryable<Score> scores)
-        {
-            switch (learnMode)
-            {
-                case ELearnMode.OriginalWord:
-                    return
-                        scores.OrderBy(
-                            a =>
-                                a.OriginalWordCount > 0 && a.OriginalWordCount > 0
-                                    ? a.OriginalWordSuccessCount / a.OriginalWordCount
-                                    : 0);
-
-                case ELearnMode.Pronunciation:
-                    return
-                        scores.OrderBy(
-                            a =>
-                                a.PronunciationCount > 0 && a.PronunciationCount > 0
-                                    ? a.PronunciationSuccessCount / a.PronunciationCount
-                                    : 0);
-
-                case ELearnMode.Translation:
-                    return
-                        scores.OrderBy(
-                            a =>
-                                a.TranslationCount > 0 && a.TranslationCount > 0
-                                    ? a.TranslationSuccessCount / a.TranslationCount
-                                    : 0);
-            }
-
-            return scores.OrderBy(a => a.ViewCount);
-        }
-
 
         public LearnUnit GetNextWord(WordSettings settings)
         {
@@ -229,113 +181,68 @@ namespace ChineseDuck.Bot.Rest.Repository
             var strategy = GetLearnMode(userId);
             var pollAnswersCount = settings.PollAnswersCount;
 
-            SetUnscoredWords(userId);
 
-            var scores =
-                _context.Scores.Where(a => a.IdUser == userId).OrderBy(a => 0);
-
-
-            var difficultScores = GetDifficultScores(learnMode, scores);
-
-            IQueryable<IWord> userWords;
-            switch (strategy)
-            {
-                case EGettingWordsStrategy.NewFirst:
-
-                    userWords = scores.ThenByDescending(a => a.LastLearned ?? DateTime.MaxValue)
-                        .ThenByDescending(a => a.LastView)
-                        .ThenByDescending(a => a.Word.LastModified)
-                        .Select(a => a.Word);
-                    break;
-
-                case EGettingWordsStrategy.NewMostDifficult:
-
-                    userWords = difficultScores.ThenByDescending(a => a.LastLearned ?? DateTime.MaxValue)
-                        .ThenByDescending(a => a.LastView)
-                        .Select(a => a.Word);
-                    break;
-
-                case EGettingWordsStrategy.OldFirst:
-
-                    userWords = scores.ThenBy(a => a.LastLearned ?? DateTime.MinValue)
-                        .ThenBy(a => a.LastView)
-                        .ThenBy(a => a.Word.LastModified)
-                        .Select(a => a.Word);
-                    break;
-
-                case EGettingWordsStrategy.OldMostDifficult:
-
-                    userWords = difficultScores.ThenBy(a => a.LastLearned ?? DateTime.MinValue)
-                        .ThenBy(a => a.LastView)
-                        .Select(a => a.Word);
-                    break;
-
-                case EGettingWordsStrategy.Random:
-
-                    userWords = _context.Words.OrderBy(a => Guid.NewGuid());
-                    break;
-
-                default:
-                    userWords = scores.Select(a => a.Word);
-                    break;
-            }
-
-            var word = userWords.FirstOrDefault();
-
+            IWord word = null;
             if (word == null)
                 throw new Exception($"No suitable words to learn. userId={userId}");
 
             var wordId = word.Id;
             var score = GetScore(userId, wordId);
 
-            foreach (var sc in scores)
-                sc.IsInLearnMode = false;
+            //foreach (var sc in scores)
+            //    sc.IsInLearnMode = false;
 
-            score.LastLearnMode = learnMode.ToString();
-            score.IsInLearnMode = learnMode != ELearnMode.FullView;
-            score.LastLearned = GetRepositoryTime();
+            //score.LastLearnMode = learnMode.ToString();
+            //score.IsInLearnMode = learnMode != ELearnMode.FullView;
+            //score.LastLearned = GetRepositoryTime();
 
-            var answers =
-                userWords.Where(a => a.SyllablesCount == word.SyllablesCount && a.Id != wordId)
-                    .Take(pollAnswersCount - 1)
-                    .Concat(userWords.Where(a => a.Id == wordId).Take(1))
-                    .OrderBy(a => Guid.NewGuid());
+            //var answers =
+            //    userWords.Where(a => a.SyllablesCount == word.SyllablesCount && a.Id != wordId)
+            //        .Take(pollAnswersCount - 1)
+            //        .Concat(userWords.Where(a => a.Id == wordId).Take(1))
+            //        .OrderBy(a => Guid.NewGuid());
 
             var questionItem = new LearnUnit();
 
-            switch (learnMode)
-            {
-                case ELearnMode.OriginalWord:
-                    questionItem.Options = answers.Select(a => a.OriginalWord).ToArray();
-                    questionItem.Picture = word.CardOriginalWord;
-                    break;
+            //switch (learnMode)
+            //{
+            //    case ELearnMode.OriginalWord:
+            //        questionItem.Options = answers.Select(a => a.OriginalWord).ToArray();
+            //        questionItem.Picture = word.CardOriginalWord;
+            //        break;
 
-                case ELearnMode.Pronunciation:
-                    questionItem.Options = answers.Select(a => a.Pronunciation).ToArray();
-                    questionItem.Picture = word.CardPronunciation;
-                    break;
+            //    case ELearnMode.Pronunciation:
+            //        questionItem.Options = answers.Select(a => a.Pronunciation).ToArray();
+            //        questionItem.Picture = word.CardPronunciation;
+            //        break;
 
-                case ELearnMode.Translation:
-                    questionItem.Options = answers.Select(a => a.Translation).ToArray();
-                    questionItem.Picture = word.CardTranslation;
-                    break;
+            //    case ELearnMode.Translation:
+            //        questionItem.Options = answers.Select(a => a.Translation).ToArray();
+            //        questionItem.Picture = word.CardTranslation;
+            //        break;
 
-                case ELearnMode.FullView:
-                    if (score.ViewCount == null)
-                        score.ViewCount = 0;
+            //    case ELearnMode.FullView:
+            //        if (score.ViewCount == null)
+            //            score.ViewCount = 0;
 
-                    score.ViewCount++;
-                    questionItem.Options = new string[0];
-                    questionItem.Picture = word.CardAll;
-                    questionItem.WordStatistic = GetUserWordStatistic(userId, wordId).ToString();
-                    questionItem.IdWord = wordId;
-                    break;
-            }
+            //        score.ViewCount++;
+            //        questionItem.Options = new string[0];
+            //        questionItem.Picture = word.CardAll;
+            //        questionItem.WordStatistic = GetUserWordStatistic(userId, wordId).ToString();
+            //        questionItem.IdWord = wordId;
+            //        break;
+            //}
 
-            _context.SaveChanges();
+            //_context.SaveChanges();
 
 
             return questionItem;
+        }
+
+        public IWord GetCurrentWord(long userId)
+        {
+            var word = _wordApi.GetCurrentWord(userId);
+            return word;
         }
     }
 }
